LF-4691 Set overflow-y to auto in FixedHeaderContainer

--- a/packages/webapp/src/components/Animals/FixedHeaderContainer/styles.module.scss
+++ b/packages/webapp/src/components/Animals/FixedHeaderContainer/styles.module.scss
@@ -44,7 +44,7 @@
 .overflowStyle {
   display: flex;
   justify-content: center;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .childrenWrapper {
